updated versions and cleaned code using sonarlint